tests/ui/zod/fail/missing_namespace.stderr
error: Missing field `namespace`
 --> tests/ui/zod/fail/missing_namespace.rs:3:10
  |
3 | #[derive(Zod)]
  |          ^^^
  |
  = note: this error originates in the derive macro `Zod` (in Nightly builds, run with -Z macro-backtrace for more info)
